'hillfort map view added'

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="org.wit.hillfort">
 
-  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
   <application
-    android:name="org.wit.hillfort.main.MainApp"
+    android:name=".main.MainApp"
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
@@ -13,29 +11,33 @@
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
     <activity
-      android:name="org.wit.hillfort.activities.SplashActivity"
+      android:name=".activities.HillfortMapsActivity"
+      android:label="@string/title_activity_hillfort_maps"
+      android:theme="@style/AppTheme.NoActionBar"></activity>
+    <activity
+      android:name=".activities.SplashActivity"
       android:configChanges="orientation|keyboardHidden|screenSize"
-      android:label="@string/app_name"
-      >
+      android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-    <activity android:name="org.wit.hillfort.activities.HillfortActivity"></activity>
-    <activity android:name="org.wit.hillfort.activities.LoginActivity"></activity>
-    <activity android:name="org.wit.hillfort.activities.SettingsActivity"></activity>
-    <activity android:name="org.wit.hillfort.activities.HillfortListActivity">
-    </activity>
+    <activity android:name=".activities.HillfortActivity" />
+    <activity android:name=".activities.LoginActivity" />
+    <activity android:name=".activities.SettingsActivity" />
+    <activity android:name=".activities.HillfortListActivity"></activity>
+
+    <activity
+      android:name=".activities.MapsActivity"
+      android:label="@string/title_activity_maps" />
 
     <meta-data
       android:name="com.google.android.geo.API_KEY"
       android:value="@string/google_maps_key" />
-
-    <activity
-      android:name="org.wit.hillfort.activities.MapsActivity"
-      android:label="@string/title_activity_maps"></activity>
   </application>
+
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest>
